<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/notifications_settings"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/importance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/importance"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />


    <RadioGroup
        android:id="@+id/importance_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24sp"
        android:orientation="vertical"
        android:layout_marginStart="16sp"
        app:layout_constraintTop_toBottomOf="@id/importance_tv">

        <RadioButton
            android:id="@+id/medium_rb"
            android:text="@string/medium_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/high_rb"
            android:text="@string/high_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/urgent_rb"
            android:text="@string/urgent_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/visibility_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/visibility"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importance_group" />



    <RadioGroup
        android:id="@+id/visibility_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24sp"
        android:layout_marginStart="16sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/visibility_tv">

        <RadioButton
            android:id="@+id/public_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_visibility"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/secret_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secret_visibility"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/private_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_visibility"
            android:textSize="24sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/show_full_message_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_the_message_in_full"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/visibility_group"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/two_buttons_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_action_buttons"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/show_full_message_chb"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>