<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/homework_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homework_tv"
        android:layout_marginTop="140dp"
        android:layout_marginStart="16dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/send_notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_et"
        android:layout_marginTop="56dp"
        android:textSize="24sp"
        android:text="@string/send_notification"
        />


</androidx.constraintlayout.widget.ConstraintLayout>